feat: finish course section
fix: adjust missing ref in dummyDB and add rating calculation func in AppContext

--- a/src/utils.css
+++ b/src/utils.css
@@ -8,3 +8,7 @@
   font-size: var(--home-heading-large);
   line-height: var(--home-heading-large-line);
 }
+
+@utility grid-cols-auto {
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
