feat: finish first section in course details page, added some custom classes used in Tailwind

--- a/src/theme.css
+++ b/src/theme.css
@@ -5,4 +5,10 @@
 
   --home-heading-large: 48px;
   --home-heading-large-line: 56px;
+
+  --course-details-heading-small: 26px;
+  --course-details-heading-small-line: 36px;
+
+  --course-details-heading-large: 36px;
+  --course-details-heading-large-line: 44px;
 }
