--- a/src/theme.css
+++ b/src/theme.css
@@ -14,4 +14,7 @@
 
   --course-details-heading-large: 36px;
   --course-details-heading-large-line: 44px;
+
+  --card-max-width: 424px;
+  --card-shadow: 0px 4px 15px 2px rgba(0, 0, 0, 0.1);
 }
